CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_C_FLAGS "-Ofast -fstack-protector-all -Wl,-z,relro,-z,now")

SET(libParseURLSources libParseURL)
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}")

ADD_LIBRARY(libParseURL SHARED ${libParseURLSources})
SET_TARGET_PROPERTIES(libParseURL PROPERTIES LINKER_LANGUAGE C)
TARGET_LINK_LIBRARIES(libParseURL)

ADD_LIBRARY(libParseURL_static STATIC ${libParseURLSources})
SET_TARGET_PROPERTIES(libParseURL_static PROPERTIES LINKER_LANGUAGE C)
